Pequeñas correcciones y actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -222,7 +222,7 @@
     "charge-date": "Fecha cargo",
     "chart": "Gráfico",
     "charts": "Gráficos",
-    "chat": "Chat",
+    "chat": "Čchat",
     "check-table": "Error al comprobar la tabla '%tableName%'",
     "check-vies": "Comprobar VIES",
     "checked": "Comprobado",
@@ -1142,7 +1142,7 @@
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "physical-stock": "Stock físico",
-    "picking": "Vybrání",
+    "picking": "Vybírání",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduzca un valor para el campo",
     "plugin": "Plugin",
@@ -1591,7 +1591,7 @@
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
-    "updates-available": "Actualizaciones disponibles",
+    "updates-available": "Aktualizace k dispozici",
     "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktualizátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
     "updating-attached-relations": "Aktualizace připojených vztahů",
     "upload-file": "Subir archivo",
