--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -769,7 +769,7 @@
     "installer-requirements": "Die folgenden Erweiterungen und Funktionen werden für FacturaScripts benötigt:",
     "integrity-check": "Integritätsprüfung",
     "integrity-check-help": "Dies ist eine Überprüfung der Systemintegrität, beschrieben als",
-    "interest": "Interés",
+    "interest": "Zins",
     "international-identifier": "Internationale Kennung",
     "intra-community": "Innergemeinschaftlich",
     "invalid-alphanumeric-code": "Ungültiger alphanumerischer Code",
@@ -920,7 +920,7 @@
     "mail-test-ok": "Erfolgreicher E-Mail-Test",
     "mailer": "Mail-Controller",
     "main-address": "Hauptadresse",
-    "manage": "manage",
+    "manage": "Verwalten",
     "manage-installation": "Administrar",
     "manual": "Handbuch",
     "manufacturer": "Hersteller",
@@ -930,7 +930,7 @@
     "margin": "Rand",
     "margin-top": "Rand oben",
     "mark-as-homepage": "Als Startseite markieren",
-    "marked-as-homepage": "Als Homepage markiert",
+    "marked-as-homepage": "Als Homepage markiert. Drücken Sie erneut, um die Markierung aufzuheben.",
     "max-input-vars-warning": "Mit der aktuellen PHP-Konfiguration (max_input_vars) können Sie nicht mit Dokumenten arbeiten, die mehr als %numlines% Zeilen enthalten.",
     "max-risk": "Höchstes Risiko",
     "maximum-amount-with-cifnif": "Maximalbetrag mit CIF\/NIF",
@@ -967,7 +967,7 @@
     "model-not-found": "Modell nicht gefunden: %model%",
     "monday": "Montag",
     "month": "Monat",
-    "month-1": "Enero",
+    "month-1": "Januar",
     "month-10": "Oktober",
     "month-11": "Noeviembre",
     "month-12": "Dezember",
@@ -979,7 +979,7 @@
     "month-7": "Juli",
     "month-8": "Agosto",
     "month-9": "Septiembre",
-    "month-name": "Month Name",
+    "month-name": "Monatsname",
     "month-wildcard-info": "Current month (of the current date)",
     "monthly": "monatlich",
     "monthly-payment": "Pago mensual",
@@ -987,7 +987,7 @@
     "more": "Mehr",
     "more-fields": "mehr Felder",
     "more-plugins": "more-plugins",
-    "move-lines": "Mover líneas",
+    "move-lines": "Zeilen verschieben",
     "movements": "Bewegungen",
     "my-profile": "Mein Profil",
     "mysql": "MySQL",
@@ -996,12 +996,12 @@
     "name": "Nombre",
     "name-or-business-name": "Name oder Firmenname",
     "nature": "Natur",
-    "need-help-password": "need-help-password",
+    "need-help-password": "Brauchen Sie Hilfe beim Passwort?",
     "negative-balance": "Negativer Saldo",
     "net": "Netz",
     "new": "Neu",
     "new-acc-entry-line-p": "Sie können eine Zeile eingeben, indem Sie den Unterkontencode eingeben oder auf die Unterkonten-Schaltfläche klicken und ein Unterkonto auswählen.",
-    "new-address": "Neue Übersetzung",
+    "new-address": "Neue Adresse",
     "new-customer": "neuer Kunde",
     "new-customers": "new-customers",
     "new-invoice-line-p": "Sie können ein Produkt hinzufügen, indem Sie auf die Produkt-Schaltfläche klicken oder dessen Referenz oder Barcode im Barcode-Feld eingeben. Oder drücken Sie die Linien-Schaltfläche für eine Linie ohne Produkt.",
@@ -1021,7 +1021,7 @@
     "no-outstanding-amount": "Kein ausstehender Betrag",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Keine Referenz",
-    "no-selected-item": "no-selected-item",
+    "no-selected-item": "Keine Elemente ausgewählt",
     "no-stock": "Kein Bestand",
     "non-editable-accounting-entry": "Nicht bearbeitbarer Buchungseintrag",
     "non-editable-columns": "non-editable-columns",
@@ -1030,7 +1030,7 @@
     "normal": "Normal",
     "not-allowed-delete": "not-allowed-delete",
     "not-allowed-modify": "Sie haben keine Berechtigung zum Ändern",
-    "not-enough-stock": "not-enough-stock",
+    "not-enough-stock": "Nicht genügend Lagerbestand von %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "Nicht öffentlich",
     "not-stored-content": "Inhalt nicht gespeichert",
@@ -1043,10 +1043,10 @@
     "notice": "Aviso",
     "notices": "Bemerkungen",
     "notification": "Benachrichtigung",
-    "notifications": "Notificaciones",
+    "notifications": "Benachrichtigungen",
     "november": "November",
     "number": "Nummer",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Anzahl der Anhänge",
     "number-length": "number-length",
     "number-recipients": "Nº perceptores",
     "number2": "Nummer 2",
@@ -1059,7 +1059,7 @@
     "only-charged": "nur berechnet",
     "only-closed": "Nur geschlossen",
     "only-insert": "Sólo añadir",
-    "only-owner-data": "only-owner-data",
+    "only-owner-data": "Nur Benutzerdaten anzeigen",
     "only-pending": "Nur ausstehend",
     "only-suspended": "Nur ausgesetzt",
     "open": "öffnen",
@@ -1067,7 +1067,7 @@
     "open-tab": "Abrir en una nueva pestaña",
     "opened": "Opened",
     "opening-acounting-completed": "Buchhaltungseröffnung abgeschlossen",
-    "opening-operation": "Apertura",
+    "opening-operation": "Öffnung",
     "operation": "Operation",
     "operator": "Operador",
     "option": "Option",
@@ -1079,7 +1079,7 @@
     "order-email-text": "o",
     "orders": "Aufträge",
     "origin": "Ursprung",
-    "origin-warehouse": "Origin warehouse",
+    "origin-warehouse": "Ursprungslager",
     "original": "Original",
     "original-file": "Originaldatei",
     "other-data": "Andere Daten",
@@ -1102,7 +1102,7 @@
     "parent-family-cant-be-child": "Die Elternfamilie kann nicht mit dem Kind identisch sein.",
     "parent-group": "Parent group",
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
-    "parent-group-loop": "Parent group %parentGroup% causing circular relation.",
+    "parent-group-loop": "Die übergeordnete Gruppe %parentGroup% verursacht eine zirkuläre Beziehung.",
     "partnumber": "Artikelnummer",
     "passenger": "Pasajero",
     "password": "Contraseña",
@@ -1219,7 +1219,7 @@
     "purchases-subaccount-not-found": "purchases-subaccount-not-found",
     "pvp": "Endverbraucherpreis",
     "pvp-total": "Gesamtpreis",
-    "pvp-unit": "Unit retail price",
+    "pvp-unit": "Einzelhandelspreis",
     "pvpsindto-line-error": "Fehler im Wert von pvpsindto der Zeile 0 des Dokuments. Richtiger Wert: 1",
     "pvptotal-line-error": "Fehler im pvptotal Wert der Zeile 0 des Dokuments. Richtiger Wert: 1",
     "quantity": "Menge",
@@ -1234,8 +1234,8 @@
     "re-open": "Wieder öffnen",
     "react": "Reagieren",
     "read-message-by": "Leído por %nick% el %date%",
-    "read-more": "Leer más",
-    "readonly": "readonly",
+    "read-more": "Mehr lesen",
+    "readonly": "Nur lesen",
     "rebuild": "rebuild",
     "rebuild-completed": "Wiederaufbau abgeschlossen",
     "rebuild-stock": "Bestand neu erstellen",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Rückzahlung der Zahlung %document%",
     "refunds": "Rückerstattungen",
     "register": "Registrieren",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad": "Die Installation von FacturaScripts registrieren",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Instalation registrieren",
     "register-installation-p": "Registrieren Sie Ihre Installation, um kostenpflichtige oder private Plugins aktualisieren zu können.",
@@ -1336,13 +1336,13 @@
     "select-all": "Alle auswählen",
     "select-none": "Keine Auswahl treffen",
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
-    "select-user": "Select User",
-    "selected-quantity": "approve-quantity",
+    "select-user": "Benutzer auswählen",
+    "selected-quantity": "Ausgewählte Menge",
     "selector-number": "Wähler",
     "send": "Senden",
     "send-anonymous-data": "Anonyme Daten senden",
     "send-audios": "A",
-    "send-documents": "Enviar documentos",
+    "send-documents": "Dokumente senden",
     "send-images": "Bilder senden",
     "send-invoices": "Enviar facturas",
     "send-location": "Enviar ubicación",
@@ -1381,7 +1381,7 @@
     "short-name": "Kurzname:",
     "show": "Zeigen",
     "show-balance-graphic": "show-balance-graphic",
-    "show-crm-warnings": "Mostrar avisos CRM",
+    "show-crm-warnings": "CRM-Warnungen anzeigen",
     "show-expired-receipts": "Abgelaufene Belege anzeigen",
     "show-month-stats": "Monatsstatistiken anzeigen",
     "show-pending-remittances": "Zeige ausstehende Überweisungen",
@@ -1396,7 +1396,7 @@
     "sketch-invoice-warning": "Diese Rechnung ist noch ein Entwurf. Machen Sie sie offiziell, indem Sie ihren Status auf ausgestellt ändern.",
     "small": "Klein",
     "smaller-than": "Kleiner als",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "Die SOAP-Erweiterung ist in PHP nicht aktiviert. Bitte wenden Sie sich an Ihren Hosting-Anbieter, um sie zu aktivieren.",
     "social-security-number": "Sozialversicherungsnummer",
     "sort": "Order",
     "sort-by-column": "Nach Spalte sortieren",
@@ -1462,7 +1462,7 @@
     "supplied-subaccount-not-found": "Lieferkonto nicht gefunden",
     "supplier": "Lieferant",
     "supplier-account-not-found": "Unterkonto des Lieferanten nicht gefunden",
-    "supplier-code": "supplier-code",
+    "supplier-code": "Lieferantencode",
     "supplier-delivery-note": "Lieferantenlieferschein",
     "supplier-delivery-notes": "Lieferantenlieferscheine",
     "supplier-estimation": "Lieferanten-Kostenvoranschlag",
@@ -1479,7 +1479,7 @@
     "supplier-reference": "Lieferantenreferenz",
     "suppliers": "Lieferanten",
     "support": "Unterstützung",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "supported-tax-re-subaccount": "Unterkonto unterstützter Zuschlag",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Zuschlag",
     "surname": "Nachnamen",
@@ -1501,7 +1501,7 @@
     "tax-areas": "tax-areas",
     "tax-base": "Steuerbemessungsgrundlage",
     "tax-credit-account": "Credit account for taxes",
-    "tax-debit-account": "Debit account for taxes",
+    "tax-debit-account": "Steuerlastschriftkonto",
     "tax-transport": "Steuerverkehr",
     "taxes": "Steuern",
     "telemetry-data-to-send": "Die registrierten Installationen melden regelmäßig die Version von FacturaScripts, PHP, Land, Sprache und Plugin-Liste.",
@@ -1531,7 +1531,7 @@
     "time": "Zeit",
     "timezone": "Zeitzone",
     "title": "Titel",
-    "title-font-size": "t",
+    "title-font-size": "Schriftgröße Titel",
     "title-url": "Title URL",
     "to": "Bis",
     "to-refund": "A devolver",
@@ -1540,7 +1540,7 @@
     "total": "Gesamt",
     "total-amount": "total-amount",
     "total-cost": "Gesamtkosten",
-    "total-purchases": "total-purchases",
+    "total-purchases": "Gesamteinkäufe",
     "total-sales": "Gesamtverkäufe",
     "total-value-error": "Gesamtmenge von 0 1 falsch (2). Richtige Menge: 3",
     "total-with-taxes": "Gesamt mit Steuern",
@@ -1566,12 +1566,12 @@
     "type-error": "Type error",
     "type-info": "Informationstyp",
     "type-notice": "Hinweistyp",
-    "type-success": "type-success",
+    "type-success": "Typ erfolgreich",
     "type-warning": "Warnungstyp",
     "unbalance": "Unausgeglichen",
-    "unbalanced-entry": "Asiento descuadrado",
-    "unchecked": "unchecked",
-    "under-minimums": "under-minimums",
+    "unbalanced-entry": "Ungebalancierte Buchung",
+    "unchecked": "Nicht überprüft",
+    "under-minimums": "Unterhalb der Mindestgrenzen",
     "undo": "Rückgängig machen",
     "unit-profit": "unit-profit",
     "unit-purchase-price": "Einzelhandelspreis",
@@ -1591,7 +1591,7 @@
     "update-time": "Aktuallierungszeit",
     "updated-model": "Aktualisiert %model% (%key%) %desc%",
     "updater": "Updater",
-    "updates-available": "Actualizaciones disponibles",
+    "updates-available": "Verfügbare Updates",
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Datei hochladen",
@@ -1631,7 +1631,7 @@
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "API anzeigen",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
-    "view-estimation": "Ver presupuesto",
+    "view-estimation": "Schätzung anzeigen",
     "view-order": "Bestellung anzeigen",
     "warehouse": "Warenhaus",
     "warehouse-cant-be-same": "Das Ursprungs- und das Ziellager können nicht identisch sein.",
