--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -154,7 +154,7 @@
     "banking-movements": "Banku-mugimenduak",
     "barcode": "Barra-kodea",
     "bcc": "BCC",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Babesle izan zaitez",
     "big": "Handia",
     "billing": "Fakturazioa",
     "billing-address": "Fakturazio helbidea",
@@ -1142,7 +1142,7 @@
     "php-extension-not-found": "%extension% PHP gehigarria instalatu gabe duzu.",
     "php-support-end": "PHP %current%-(r)en laguntza laster amaituko da. PHP %min% bertsiora eguneratu mesedez.",
     "physical-stock": "Stock fisikoa",
-    "picking": "Picking-a",
+    "picking": "Picking",
     "plan": "Plana",
     "please-enter-value": "Mesedez, eremuan balio bat sartu",
     "plugin": "Plugin",
@@ -1263,7 +1263,7 @@
     "refunds": "Itzulketak",
     "register": "Erregistratu",
     "register-install-ad": "Registratu FacturaScripts instalazioa",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad-p": "Facturako instalazioa erregistratzen baduzu, 1 hilabete PRO babesa izango duzu, gure plugin esklusiboetako bat deskargatzeko. Gainera, core-eko eta PHP-ren bertsioen estatistikak lortzen laguntzen du.",
     "register-installation": "Instalazioa erregistratu",
     "register-installation-p": "Zure instalazioa erregistratu ordainpeko edo pribatuak diren pluginak eguneratu ahal izateko.",
     "register-symbol": "#",
@@ -1278,7 +1278,7 @@
     "reloading": "Kargatzen...",
     "remove-filter": "Iragazkia kendu",
     "remove-from-list": "Kendu",
-    "removing-logs-until": "Aldaketak %date%-ra artean ezabatzen",
+    "removing-logs-until": "Logak %date%-ra arte ezabatzen",
     "renew": "Berritu",
     "renumber": "Berzenbakitu",
     "renumber-accounting": "Idazpenei zenbaki berriak eman",
@@ -1591,8 +1591,8 @@
     "update-time": "Eguneratze ordua",
     "updated-model": "%model% (%key%) %desc% Eguneratua",
     "updater": "Eguneratzailea",
-    "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available": "Eguneratzeak eskuragarri",
+    "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzailearen gainean eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
     "updating-attached-relations": "Erantsitutako erlazioak eguneratzen",
     "upload-file": "Artxiboa kargatu",
     "uploaded-at": "Hemen kargatua",
