--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1592,7 +1592,7 @@
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
     "updates-available": "Actualizacións dispoñibles",
-    "updates-available-p": "Hai actualizacións dispoñibles de FacturaScripts. Por favor, fai clic no actualizador e descarga a nova versión. As actualizacións corrixen fallos e engaden novas funcións.",
+    "updates-available-p": "Hai actualizacións dispoñibles de FacturaScripts. Por favor, fai clic no actualizador e descarga a nova versión. As actualizacións corrixen fallos e engaden novas funcionalidades.",
     "updating-attached-relations": "Actualizando contadores de arquivos adxuntos",
     "upload-file": "Subir ficheiro",
     "uploaded-at": "Cargado en",
