--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -154,7 +154,7 @@
     "banking-movements": "Movimenti bancari",
     "barcode": "Codice a barre",
     "bcc": "BCC",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Diventa sponsor",
     "big": "grande",
     "billing": "Fatturazione",
     "billing-address": "Indirizzo Di Fatturazione",
@@ -172,7 +172,7 @@
     "buy": "comprare",
     "cache": "nascondiglio",
     "cache-dir": "Directory cache '0'",
-    "calculate": "calculate",
+    "calculate": "Calcolare",
     "calculated-net-diff": "Differenza trovata nel calcolare il netto. %net% VS %net2%",
     "calculated-surcharge-diff": "Differenza trovata nel calcolare il sovrapprezzo. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Differenza trovata nel calcolare l'IVA totale. %tax% VS %tax2%",
@@ -266,7 +266,7 @@
     "color-warning": "Colore avviso",
     "colors": "colori",
     "column": "Colonna",
-    "columns": "Columns",
+    "columns": "Colonne",
     "combination-code": "Codice di combinazione",
     "combinations": "combinazioni",
     "commercial-terms": "Termini commerciali",
@@ -349,7 +349,7 @@
     "customer-banking-accounts": "Conti bancari",
     "customer-code": "codice cliente",
     "customer-commission-info": "Si applicherà solo quando la vendita è al cliente selezionato",
-    "customer-delivery-note": "Customer delivery note",
+    "customer-delivery-note": "Bolletta del cliente",
     "customer-delivery-notes": "Note di consegna del cliente",
     "customer-estimation": "Estimazione cliente",
     "customer-estimations": "Stime del cliente",
@@ -359,7 +359,7 @@
     "customer-invoice-deleted-successfully": "Fattura di vendita 0 cancellata con successo.",
     "customer-invoices": "Customer invoices",
     "customer-not-found": "Cliente non trovato",
-    "customer-order": "Customer order",
+    "customer-order": "Ordine del cliente",
     "customer-orders": "Ordini del cliente",
     "customer-payment-concept": "concetto di pagamento del cliente",
     "customer-reached-maximum-risk": "Il cliente ha raggiunto il massimo rischio",
@@ -409,7 +409,7 @@
     "default-tax": "imposta-predefinita",
     "default-to-company-email": "Per impostazione predefinita, la email aziendale",
     "default-to-user-email": "Per impostazione predefinita, l'e-mail dell'utente",
-    "default-warehouse": "default-warehouse",
+    "default-warehouse": "Magazzino predefinito",
     "delete": "rimuovere",
     "delete-all": "Elimina tutto",
     "delete-closing": "elimina-la-chiusura",
@@ -472,7 +472,7 @@
     "document-report": "Reports documenti",
     "document-sequence": "sequenza del documento",
     "document-sequences": "sequenze di documenti",
-    "document-states": "Document states",
+    "document-states": "Stati del documento",
     "document-type": "Tipo di documento",
     "document-type-valid-length": "Tipo di documento non valido. Deve essere compreso tra 1 e 20 caratteri.",
     "document-wildcard-info": "Document indicated in the head of the accounting entry",
@@ -729,7 +729,7 @@
     "high-purchase-price": "Prezzo più alto",
     "hint-create-accounting-entry": "Crea la registrazione contabile per la regolarizzazione delle imposte del periodo",
     "hint-vat-register": "Visualizza\/Modifica registro IVA",
-    "history": "Historial",
+    "history": "Storico",
     "homepage": "Pagina iniziale",
     "host": "host:",
     "hour": "Ora",
@@ -759,7 +759,7 @@
     "incompatible-with-facturascripts": "Incompatibile con la versione %version% di FacturaScripts",
     "incorrect-accounting-amount": "Importo dell'entry contabile non corretto.",
     "info": "Informazioni",
-    "infostate-component-title": "Status Information",
+    "infostate-component-title": "Informazioni di Stato",
     "initial-number": "numero iniziale",
     "insert-update": "Inserisci o aggiorna",
     "installed": "Installato",
@@ -801,7 +801,7 @@
     "ip-banned": "ip-bannato",
     "irpf": "IRPEF",
     "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
-    "irpf-subaccount-not-found": "irpf-subaccount-not-found",
+    "irpf-subaccount-not-found": "Subconto IRPF non trovato",
     "is-admin": "È amministratore",
     "is-creditor": "È creditore",
     "is-person": "È una persona fisica",
@@ -890,7 +890,7 @@
     "lock-entry": "Blocca voce",
     "lock-invoice": "blocca fattura",
     "lock-unlock": "Lock-Unlock",
-    "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
+    "lock-unlock-account-entry": "Blocca\/Sblocca la voce contabile",
     "locked": "Bloccato",
     "log": "Log",
     "login": "Accesso",
@@ -902,7 +902,7 @@
     "login-to-continue": "Effettua il login per continuare",
     "login-to-continue-p": "Devi identificarti per continuare con questa azione. Clicca su accedi o crea un account.",
     "login-user-not-found": "Utente non trovato: %nick%",
-    "logo": "logo",
+    "logo": "Logo",
     "logout": "Disconnettersi",
     "logout-ok": "Disconnettersi con successo.",
     "logs": "registri",
@@ -911,7 +911,7 @@
     "longitude-abb": "Long",
     "look-for-gaps": "Cerca spazi vuoti",
     "lot": "lotto",
-    "low-security": "Low security",
+    "low-security": "Bassa sicurezza",
     "machine": "macchina",
     "machines": "Macchine",
     "macro-account-note-info": "Chiavi per sostituire i valori macro",
@@ -951,7 +951,7 @@
     "messages-component-title": "Avvisi e messaggi",
     "meta-description": "FacturaScripts è un software di fatturazione e contabilità per le piccole imprese. Si tratta di software libero sotto licenza GNU \/ LGPL.",
     "method-payment": "Metodo di pagamento",
-    "mime-type": "Mime Type",
+    "mime-type": "Tipo MIME",
     "minimum-amount-with-cifnif": "Importo minimo con CIF\/NIF",
     "minimum-amount-without-cifnif": "Importo minimo senza CIF\/NIF",
     "minimum-stock": "Scorta minima",
@@ -994,7 +994,7 @@
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Questo campo è necessaria solo in alcuni hosting MySQL.",
     "name": "Nombre",
-    "name-or-business-name": "Name or Bussine name",
+    "name-or-business-name": "Nome o ragione sociale",
     "nature": "Natura",
     "need-help-password": "necessita aiuto con la password",
     "negative-balance": "Saldo negativo",
@@ -1006,7 +1006,7 @@
     "new-customers": "nuovi-clienti",
     "new-invoice-line-p": "Puoi aggiungere un prodotto facendo clic sul pulsante prodotto o scrivendo il riferimento o il codice a barre nel campo codice a barre. Oppure premi il pulsante linea per una linea senza prodotto.",
     "new-password": "nuova password",
-    "new-price": "new-price",
+    "new-price": "Nuovo prezzo",
     "new-refund": "Nuovo rimborso",
     "new-supplier": "nuovo fornitore",
     "news": "notizie",
@@ -1014,7 +1014,7 @@
     "nick": "tacca",
     "no": "non",
     "no-data": "Nessun dato",
-    "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-data-received-form": "Nessun dato ricevuto dal modulo",
     "no-extra-lines": "Nessuna linea extra",
     "no-gaps-found": "Nessun gap trovato",
     "no-invoice": "no-invoice",
@@ -1038,7 +1038,7 @@
     "not-valid-fiscal-number": "Il %type% %number% non è valido",
     "not-valid-image": "Immagine non valida",
     "not-valid-percentage-retention": "Percentuale di ritenzione non valida. Deve essere superiore a 0.00",
-    "note": "note",
+    "note": "Nota",
     "notes": "Gli appunti",
     "notice": "Avviso",
     "notices": "Avvisi",
@@ -1046,7 +1046,7 @@
     "notifications": "Notificaciones",
     "november": "Novembre",
     "number": "Numero",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Nº di allegati",
     "number-length": "number-length",
     "number-recipients": "Nº perceptores",
     "number2": "il numero 2",
@@ -1054,17 +1054,17 @@
     "numsupplier": "Num. fornitore",
     "observations": "osservazioni",
     "october": "Ottobre",
-    "offsetting-account": "Offsetting account",
+    "offsetting-account": "Conto di compensazione",
     "only-active": "Solo attivi",
     "only-charged": "Solo addebitati",
     "only-closed": "Solo chiusi",
     "only-insert": "solo inserire",
-    "only-owner-data": "only-owner-data",
-    "only-pending": "only-pending",
+    "only-owner-data": "Mostra solo i registri dell'utente",
+    "only-pending": "Solo in sospeso",
     "only-suspended": "Solo sospesi",
     "open": "apri",
     "open-exercise": "aprire-esercizio",
-    "open-tab": "Abrir en una nueva pestaña",
+    "open-tab": "Apri in una nuova scheda",
     "opened": "Aperto",
     "opening-acounting-completed": "Apertura dell'esercizio corretta",
     "opening-operation": "Apertura",
@@ -1098,7 +1098,7 @@
     "paid-or-unpaid": "Pagato o non pagato",
     "paid-receipts-prevent-action": "Non è possibile eseguire questa azione a causa di ricevute pagate",
     "parent": "Genitore",
-    "parent-account": "Parent Account",
+    "parent-account": "Account Padre",
     "parent-family-cant-be-child": "La famiglia madre non può essere la stessa del bambino.",
     "parent-group": "gruppo genitore",
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
@@ -1133,13 +1133,13 @@
     "percentage-surcharge": "% sovrattassa",
     "percentage-vat": "% IVA",
     "period": "periodo",
-    "personalized": "Personalizado",
+    "personalized": "Personalizzato",
     "phase": "fase",
     "phone": "telefono",
     "phone2": "Telefono 2",
     "phones": "Telefoni",
     "php-extension-needed": "È necessaria l'estensione %extension% nella configurazione di PHP",
-    "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
+    "php-extension-not-found": "Non hai installato l'estensione PHP %extension%.",
     "php-support-end": "Il supporto per PHP %current% terminerà presto. Si prega di aggiornare PHP alla versione %min% o superiore.",
     "physical-stock": "Stock fisico",
     "picking": "Selezione",
@@ -1153,7 +1153,7 @@
     "plugin-installation-disabled": "Installazione di plugin disabilitata su questo server",
     "plugin-installed": "Plugin installato",
     "plugin-need-update": "Il plugin %plugin% richiederà un aggiornamento per funzionare con la nuova versione di FacturaScripts.",
-    "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
+    "plugin-need-update-but": "Il plugin %plugin% non ha ancora un aggiornamento compatibile.",
     "plugin-needed": "Plugin %pluginName% necessario.",
     "plugin-needs-fs-version": "Il plugin %pluginName% richiede FacturaScripts %minVersion% ma è installata la versione %version% di FacturaScripts",
     "plugin-not-compatible": "Il Plugin %pluginName% non è compatibile con FacturaScripts %versione%",
@@ -1192,7 +1192,7 @@
     "print-price": "Stampa prezzi",
     "print-quantity": "Stampare quantità",
     "printed": "Stampato",
-    "printing-format": "printing-format",
+    "printing-format": "Formato di stampa",
     "printing-formats": "Formati di stampa",
     "priority": "priorità",
     "private": "privato",
@@ -1224,23 +1224,23 @@
     "pvptotal-line-error": "Errore nel valore pvptotal della riga 0 del documento. Valore corretto: 1",
     "quantity": "Quantità",
     "quantity-abb": "abbreviazione di quantità",
-    "quantity-remaining": "Cantidad restante",
+    "quantity-remaining": "Quantità rimanente",
     "quantity-served": "quantity-served",
     "quantity-sold": "quantità venduta",
-    "randomizer-generating-more-items": "randomizer-generating-more-items",
+    "randomizer-generating-more-items": "Generando più elementi...",
     "rate": "rate",
     "rates": "Aliquote",
     "re": "RE",
     "re-open": "Riaprire",
     "react": "reagire",
-    "read-message-by": "Leído por %nick% el %date%",
+    "read-message-by": "Letto da %nick% il %date%",
     "read-more": "Leggi di più",
     "readonly": "sola lettura",
     "rebuild": "ricostruire",
     "rebuild-completed": "Ricostruzione completata",
-    "rebuild-stock": "rebuild-stock",
+    "rebuild-stock": "Ricostruisci stock",
     "receipt": "ricevuta",
-    "receipt-expense-account": "receipt-expense-account",
+    "receipt-expense-account": "Spese nel ricevimento %document%",
     "receipts": "ricevute",
     "record-deleted-correctly": "Record cancellato correttamente!",
     "record-deleted-error": "Errore nell'eliminare il record",
@@ -1260,7 +1260,7 @@
     "refresh-page": "Aggiorna pagina",
     "refund-amount": "Importo rimborsato",
     "refund-payment-concept": "Rimborso del documento %document%",
-    "refunds": "refunds",
+    "refunds": "Rimborsi",
     "register": "registrare",
     "register-install-ad": "Registra l'installazione di FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
@@ -1343,9 +1343,9 @@
     "send-anonymous-data": "Invio di dati anonimi",
     "send-audios": "Enviar audios",
     "send-documents": "Inviare documenti",
-    "send-images": "Enviar imágenes",
+    "send-images": "Invia immagini",
     "send-invoices": "Invia fatture",
-    "send-location": "Enviar ubicación",
+    "send-location": "Invia posizione",
     "send-mail": "Inviare mail",
     "send-mail-error": "Errore nell'invio dell'email",
     "send-mail-ok": "Email inviato correttamente",
@@ -1370,7 +1370,7 @@
     "services": "servizi",
     "settings": "Ajustes",
     "settlement": "Liquidazione",
-    "settlement-product": "settlement-product",
+    "settlement-product": "Prodotto di liquidazione",
     "settlements": "regolamenti",
     "setup-options": "Opzioni di installazione",
     "shipping": "Spedizione",
@@ -1401,7 +1401,7 @@
     "sort": "Order",
     "sort-by-column": "Ordina per colonna",
     "sort-by-date-asc": "Ordina per data disc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordina per data decrescente",
     "sort-by-ref-asc": "Ordina per riferimento asc.",
     "sort-by-ref-desc": "Ordina per riferimento discendente",
     "sorted-asc": "Ordinato ascendente",
@@ -1567,7 +1567,7 @@
     "type-info": "Tipo informazioni",
     "type-notice": "Tipo di avviso",
     "type-success": "Tipo corretto",
-    "type-warning": "Type warning",
+    "type-warning": "Tipo avviso",
     "unbalance": "sbilanciato",
     "unbalanced-entry": "Prenotazione non bilanciata",
     "unchecked": "Non verificato",
@@ -1583,8 +1583,8 @@
     "unlock-entry": "Sblocca",
     "unpaid": "non pagato",
     "until-accounting-entry": "Fino alla registrazione contabile",
-    "until-date": "until-date",
-    "until-subaccount": "until-subaccount",
+    "until-date": "Fino a",
+    "until-subaccount": "Fino a subconto",
     "update": "aggiornare",
     "update-stock": "Aggiorna stock",
     "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
@@ -1617,7 +1617,7 @@
     "variant": "Variante",
     "variants": "Varianti",
     "vat": "IVA",
-    "vat-document": "VAT Document",
+    "vat-document": "Documento IVA",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "Il numero '%vat-number%' è troppo corto",
     "vat-number-not-vies": "Il numero '%vat-number%' non è registrato nel sistema VIES",
@@ -1630,7 +1630,7 @@
     "video": "Video",
     "vies-check-success": "Il numero '%vat-number%' è registrato nel sistema VIES",
     "view-api": "Visualizza API",
-    "view-column-net-subtotal": "Ver columna subtotal o neto",
+    "view-column-net-subtotal": "Visualizza colonna subtotal o netto",
     "view-estimation": "Vedi citazione",
     "view-order": "Visualizza ordine",
     "warehouse": "Magazzino",
@@ -1649,7 +1649,7 @@
     "wildcard": "Wildcard",
     "wildcard-general-info": "Verrà sostituito dal valore corrispondente",
     "wildcard-title": "Wildcard sostituibili per valore",
-    "without-closure": "without-closure",
+    "without-closure": "Senza chiusura",
     "without-domicile": "Senza domicilio",
     "without-groups": "Senza gruppo",
     "without-regularization": "Senza regolarizzazione",
