--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -104,7 +104,7 @@
     "api-key": "API key",
     "api-keys": "API Keys",
     "api-version-not-found": "Versão da API não encontrada",
-    "app-preferences": "Preferências da aplicação",
+    "app-preferences": "Preferências do aplicativo",
     "applied-tax": "imposto aplicado",
     "apply": "Aplicar",
     "approve": "Aprovar",
@@ -154,7 +154,7 @@
     "banking-movements": "Movimentos bancários",
     "barcode": "Código de barras",
     "bcc": "BCC",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Torne-se patrocinador",
     "big": "Grande",
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
@@ -162,7 +162,7 @@
     "birthday": "Aniversário",
     "block-date": "Data de bloqueio",
     "blocked": "Bloqueado",
-    "blocked-date": "Bloqueado em",
+    "blocked-date": "Data bloqueada",
     "body": "Corpo",
     "book": "Reservar",
     "box-closed-ok": "Caixa fechada corretamente",
@@ -286,9 +286,9 @@
     "compared": "Comparado",
     "compatible": "Compatible",
     "completed": "Completado",
-    "component": "Component",
+    "component": "Componente",
     "concept": "Conceito",
-    "conditions": "conditions",
+    "conditions": "Condições",
     "configure-columns": "Configurador de colunas",
     "confirm": "Confirmar",
     "confirm-delete": "Confirmar excluir?",
@@ -341,7 +341,7 @@
     "cron-timeout": "O cron parou para não exceder o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar esse limite.",
     "crons": "Crons",
     "currency": "Moeda",
-    "currency-position": "Currency position",
+    "currency-position": "Posição do símbolo da moeda",
     "current-quarter": "Trimestre actual",
     "current-risk": "Risco atual",
     "customer": "Cliente",
@@ -366,12 +366,12 @@
     "customer-subaccount-p": "Indique a subconta em uso ou deixe em branco para gerar automaticamente",
     "customers": "clientes",
     "customize": "Personalizar",
-    "daily": "Daily",
+    "daily": "Diário",
     "dasboard-backup-li1": "Se excluir ou desinstalar o FacturaScripts, perderá os dados.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
     "dashboard": "Painel de controle",
-    "dashboard-backup": "Copia de seguridad",
+    "dashboard-backup": "Cópia de segurança",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
     "dashboard-for": "Dashboard da %company%",
     "data-source": "Origin data",
@@ -382,7 +382,7 @@
     "date-in": "Data em",
     "date-of-suspension": "Date of suspension",
     "date-of-the-document": "Data do documento",
-    "date-out": "Date out",
+    "date-out": "Data de saída",
     "date-out-of-exercise-range": "Data da faixa de excervise 0",
     "date-wildcard-info": "Data atual (data do computador)",
     "dateentry-wildcard-info": "dateentry-wildcard-info",
@@ -407,7 +407,7 @@
     "default-retention": "retenção-padrão",
     "default-role": "F",
     "default-tax": "Imposto padrão",
-    "default-to-company-email": "Por defecto al email de la empresa",
+    "default-to-company-email": "Por padrão ao e-mail da empresa",
     "default-to-user-email": "Por defeito para o email do usuário",
     "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
@@ -418,7 +418,7 @@
     "delete-logs": "Excluir logs",
     "delete-opening": "Eliminar abertura",
     "delete-record": "Remover registro",
-    "Deleted": "Eliminado",
+    "Deleted": "Excluído",
     "deleted-model": "Modelo eliminado %model% (%key%) %desc%",
     "delivery-note": "Nota de entrega",
     "delivery-note-email-subject": "A sua nota de entrega %code%",
@@ -429,7 +429,7 @@
     "departments": "departamentos",
     "desc": "Descrição",
     "desc-alfa-code-2": "Identificação oficial para o nome dos países e outras dependências administrativas",
-    "desc-alfa-code-3": "Identificação oficial para o nome dos países e outras unidades administrativas",
+    "desc-alfa-code-3": "Identificação oficial para os nomes dos países e outras unidades administrativas",
     "desc-business-name": "Nome oficial do cliente, para faturas e outros documentos.",
     "desc-business-name-2": "Nome legal ou legalmente registrado do cliente",
     "desc-customer-name": "Nome pelo que chamamos ao  cliente. Para uso interno.",
@@ -483,8 +483,8 @@
     "domiciled": "Domiciliado",
     "done": "Feito",
     "done-date": "Data de conclusão",
-    "dont-sell-above-pvp": "Não venda acima o preço de varejo",
-    "dont-sell-below-cost": "Não venda abaixo o custo",
+    "dont-sell-above-pvp": "Não venda acima do PVP",
+    "dont-sell-below-cost": "Não venda abaixo do custo",
     "download": "Baixar",
     "download-completed": "Download completado",
     "download-error": "Error al descargar. Código %status% - %error%",
@@ -498,7 +498,7 @@
     "duplicated-request": "Solicitação duplicada",
     "duration": "Duração",
     "edit": "Editar",
-    "editable": "Editable",
+    "editable": "Editável",
     "email": "O email",
     "email-bcc": "Cópia oculta do email",
     "email-cc": "Email com cópia",
@@ -516,7 +516,7 @@
     "emails": "E-mails",
     "emails-sent": "E-mails enviados",
     "employee": "Employee",
-    "employees": "employees",
+    "employees": "Funcionários",
     "empty": "Vazio",
     "empty-contact-data": "O contacto deve ter nome ou email ou endereço",
     "empty-ref-or-missing": "Referência vazia ou produto não encontrado",
@@ -529,9 +529,9 @@
     "end-date": "Data final",
     "end-time": "hora-final",
     "epigraph": "Epígrafe",
-    "epigraph-group": "Grupo Epígrafe",
+    "epigraph-group": "Grupo de Epígrafe",
     "epigraphs": "Epígrafes",
-    "epigraphs-group": "Epígrafes de grupo",
+    "epigraphs-group": "Grupo de Epígrafes",
     "equivalence": "Equivalência",
     "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a %accountCode% no exercício %exerciseCode%. Você importou o plano de contas?",
     "equivalent-subaccount-not-found": "Não foi encontrado nenhuma subconta equivalente a %subAccountCode% para copiar.",
@@ -584,7 +584,7 @@
     "exercise-not-found": "Exercício não encontrado.",
     "exercise-without-accounting-plan": "O",
     "exercises": "Exercícios",
-    "exit": "exit",
+    "exit": "Sair",
     "expedient": "Expediente",
     "expense-subaccount": "expense-subaccount",
     "expenses": "Despesas",
@@ -634,7 +634,7 @@
     "fiscal-number": "fiscal-number",
     "fixed-value": "fixed-value",
     "flag": "Bandeira",
-    "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
+    "folder-not-writable": "Não é possível escrever na pasta FacturaScripts.",
     "font": "Fonte",
     "font-size": "Tamanho de fonte",
     "footer": "Rodapé",
@@ -684,7 +684,7 @@
     "generated-customers": "0 clientes gerados.",
     "generated-families": "%quantity% famílias geradas.",
     "generated-invoice": "Fatura gerada",
-    "generated-manufacturers": "0 fabricantes gerados.",
+    "generated-manufacturers": "%quantity% fabricantes gerados.",
     "generated-products": "%quantity% produtos gerados",
     "generated-subaccounts": "%quantity% subcontas geradas.",
     "generated-supplier": "0 fornecedor gerado.",
@@ -722,12 +722,12 @@
     "height": "Altura",
     "hello": "Olá",
     "help": "Socorro",
-    "help-button-p": "Consulta la ayuda en cada pantalla",
+    "help-button-p": "Consulte a ajuda em cada tela",
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
     "hide": "ocultar",
     "high": "Alto",
     "high-purchase-price": "Preço de compra mais alto",
-    "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
+    "hint-create-accounting-entry": "Criar o lançamento contábil para a regularização dos impostos do período",
     "hint-vat-register": "Ver\/Modificar registro de IVA",
     "history": "Histórico",
     "homepage": "Página inicial",
@@ -771,7 +771,7 @@
     "integrity-check-help": "Esta é uma verificação da integridade do sistema, descrita como",
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Intra-comunitária",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
@@ -885,7 +885,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Carregar plano contabilístico predefinido",
     "loading-controller": "Carregando controlador: '%controllerName%'",
-    "location": "Location",
+    "location": "Localização",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "lock-entry",
     "lock-invoice": "Bloquear fatura",
@@ -901,7 +901,7 @@
     "login-text": "Digite seu nome de usuário e senha para entrar",
     "login-to-continue": "Faça login para continuar",
     "login-to-continue-p": "Necessita identificar-se para continuar com esta ação. Clique em iniciar sessão ou crie uma conta.",
-    "login-user-not-found": "Usuário não encontrado",
+    "login-user-not-found": "Usuário não encontrado: %nick%",
     "logo": "logotipo",
     "logout": "Sair",
     "logout-ok": "Sair com sucesso.",
@@ -931,9 +931,9 @@
     "margin-top": "Topo da margem",
     "mark-as-homepage": "Marque como página inicial",
     "marked-as-homepage": "M",
-    "max-input-vars-warning": "max-input-vars-warning",
+    "max-input-vars-warning": "Com a configuração atual do PHP (max_input_vars), você não poderá trabalhar com documentos de mais de %numlines% linhas.",
     "max-risk": "Risco máximo",
-    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-with-cifnif": "Máximo valor com CIF\/NIF",
     "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
     "maximum-stock": "Estoque máximo",
     "may": "Maio",
@@ -946,14 +946,14 @@
     "memcache-port": "Porta do Memcache",
     "memcache-prefix": "Prefixo Memcache",
     "memcache-set-key-item": "Elemento configurado '0' para Memcache.",
-    "menu": "Cardápio",
+    "menu": "Menu",
     "message": "Mensagem",
     "messages-component-title": "Avisos e Mensagens",
     "meta-description": "FacturaScripts é um software de contabilidade e contabilidade para as PMEs. É um software livre sob a licença GNU \/ LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Valor mínimo com CIF\/NIF",
-    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
+    "minimum-amount-without-cifnif": "Importe mínimo sem CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
     "minutes": "Minutos",
     "mismatched-accounting-entry": "Lançamento contábil incorreto",
@@ -1027,7 +1027,7 @@
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
     "none": "Nenhum",
-    "normal": "normal",
+    "normal": "Normal",
     "not-allowed-delete": "Não tem permiso para eliminar",
     "not-allowed-modify": "n",
     "not-enough-stock": "Não há estoque suficiente de %reference%",
@@ -1073,7 +1073,7 @@
     "option": "Opção",
     "optional": "opcional",
     "options": "Opções",
-    "options-button-header": "Maquetación y permisos",
+    "options-button-header": "Maquetação e permissões",
     "order": "Ordem",
     "order-email-subject": "O seu pedido %code%",
     "order-email-text": "Olá, vai anexo a sua Nota de Encomenda\/Pedido %code%",
@@ -1101,7 +1101,7 @@
     "parent-account": "Conta Pai",
     "parent-family-cant-be-child": "A família pai não pode ser a mesma que a filha.",
     "parent-group": "Grupo Pai",
-    "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
+    "parent-group-cant-be-the-same-group": "O grupo pai não pode ser o mesmo grupo",
     "parent-group-loop": "Grupo pai %parentGroup% causando relação circular",
     "partnumber": "Número da peça",
     "passenger": "Passageiro",
@@ -1119,14 +1119,14 @@
     "payment-methods": "Métodos de pagamento",
     "payments": "Pagamentos",
     "pct": "% pct",
-    "pct-irpf": "% IRPF",
+    "pct-irpf": "% IRS",
     "pct-surcharge": "% Acréscimo",
     "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
     "pending": "pendente",
     "pending-invoices-button": "Faturas Pendentes:",
     "pending-orders-button": "pedidos-pendentes-botão",
-    "pending-reception": "Pending reception",
+    "pending-reception": "Recepção pendente",
     "percentage": "Percentagem",
     "percentage-commission": "% Comissão",
     "percentage-discount": "p",
@@ -1151,7 +1151,7 @@
     "plugin-enabled": "Plugin ativado com sucesso.",
     "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
-    "plugin-installed": "Plugin instalado",
+    "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "O plugin %plugin% precisa ser atualizado para funcionar com a nova versão do FacturaScripts.",
     "plugin-need-update-but": "O plugin %plugin% ainda não tem uma atualização compatível.",
     "plugin-needed": "Plugin %pluginName% requerido.",
@@ -1235,9 +1235,9 @@
     "react": "Reaccionar",
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Ler mais",
-    "readonly": "readonly",
+    "readonly": "Somente leitura",
     "rebuild": "Reconstruir",
-    "rebuild-completed": "rebuild-completed",
+    "rebuild-completed": "Reconstrução concluída",
     "rebuild-stock": "reconstruir-estoque",
     "receipt": "recibo",
     "receipt-expense-account": "Gastos no recibo %document%",
@@ -1246,7 +1246,7 @@
     "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "Registro não encontrado",
     "record-save-error": "Ocorreu um erro ao salvar os dados",
-    "record-updated-correctly": "Registro atualizado corretamente!",
+    "record-updated-correctly": "Registro atualizado corretamente.",
     "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "fatura retificada",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registrar",
-    "register-install-ad": "Registra a instalação do FacturaScripts",
+    "register-install-ad": "Registre a instalação do FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
@@ -1461,7 +1461,7 @@
     "supplied-amount": "quantidade-fornecida",
     "supplied-subaccount-not-found": "Subconta não encontrada",
     "supplier": "Fornecedor",
-    "supplier-account-not-found": "supplier-account-not-found",
+    "supplier-account-not-found": "Subconta de fornecedor não encontrada",
     "supplier-code": "Código do fornecedor",
     "supplier-delivery-note": "Nota de Entrega de Fornecedor",
     "supplier-delivery-notes": "Notas de Entrega de Fornecedores",
@@ -1469,7 +1469,7 @@
     "supplier-estimations": "Estimativas de Fornecedor",
     "supplier-have-no-iban": "O fornecedor %%supplier não tem IBAN (conta bancária)",
     "supplier-invoice": "Fatura de Fornecedor",
-    "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
+    "supplier-invoice-deleted-successfully": "Fatura de compra %docCode% excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
     "supplier-not-found": "supplier-not-found",
     "supplier-order": "Pedido de fornecedor",
@@ -1493,7 +1493,7 @@
     "tables": "Tabelas",
     "task": "Tarefa",
     "tasks": "Tarefas",
-    "tasks-completed-title": "Tarefas finalizadas",
+    "tasks-completed-title": "Tarefas concluídas",
     "tasks-component-title": "Tarefas",
     "tasks-personal-title": "Tarefas pessoais",
     "tax": "Imposto",
@@ -1524,7 +1524,7 @@
     "this-month": "Este mês",
     "this-week": "Esta semana",
     "this-year": "Este ano",
-    "thousands-separator": "Milhares",
+    "thousands-separator": "Separador de milhar",
     "thursday": "quinta-feira",
     "ticket": "Bilhete",
     "tickets": "Bilhetes",
@@ -1552,7 +1552,7 @@
     "tracking-code": "Código de envio",
     "transfer": "transferir",
     "transfers": "Transferências",
-    "transfers-stock": "Transfers stock",
+    "transfers-stock": "Transferências de estoque",
     "translation": "Tradução",
     "translations": "Traduções",
     "travel": "Viagem",
@@ -1579,7 +1579,7 @@
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Instalação excluída do registro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "unpaid",
     "until-accounting-entry": "Até entrada contábil",
@@ -1616,7 +1616,7 @@
     "variables": "Variáveis",
     "variant": "Variante",
     "variants": "Variantes",
-    "vat": "CUBA",
+    "vat": "ICMS",
     "vat-document": "Documento de IVA",
     "vat-exception": "Exceção de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
