--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -218,7 +218,7 @@
     "cc": "CC",
     "center": "Centro",
     "change": "mudança",
-    "channel": "channel",
+    "channel": "Canal",
     "charge-date": "Data de cobrança",
     "chart": "Chart",
     "charts": "gráficos",
@@ -239,8 +239,8 @@
     "cities": "cidades",
     "city": "Cidade",
     "click-link-to-add": "clicar no link para adicionar",
-    "clone": "Clone",
-    "clone-account-entry": "Duplicate the accounting entry",
+    "clone": "Duplicar",
+    "clone-account-entry": "Duplicar a entrada contábil",
     "close": "Fechar",
     "close-box": "Fechar caixa",
     "close-exercise": "terminar exercício",
@@ -261,7 +261,7 @@
     "color-info": "Color info",
     "color-light": "Color luz",
     "color-primary": "Color primário",
-    "color-secondary": "Color secundario",
+    "color-secondary": "Cor secundária",
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "colors",
@@ -286,9 +286,9 @@
     "compared": "Comparado",
     "compatible": "Compatible",
     "completed": "Completado",
-    "component": "Component",
+    "component": "Componente",
     "concept": "Conceito",
-    "conditions": "conditions",
+    "conditions": "Condições",
     "configure-columns": "Configurar colunas",
     "confirm": "confirme",
     "confirm-delete": "Confirmar apagar?",
@@ -318,10 +318,10 @@
     "copy-subaccounts": "copy-subaccounts",
     "core-update": "core-update",
     "core-update-warning": "Advertencias de actualización",
-    "correct": "Correcto",
+    "correct": "Correto",
     "cost": "Custo",
     "cost-price": "Preço de custo",
-    "cost-price-policy": "cost-price-policy",
+    "cost-price-policy": "Política de preço de custo",
     "counterpart": "Offsetting",
     "countries": "Países",
     "country": "País",
@@ -341,7 +341,7 @@
     "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Crons",
     "currency": "Moeda",
-    "currency-position": "Currency position",
+    "currency-position": "Posição do símbolo da moeda",
     "current-quarter": "Trimestre actual",
     "current-risk": "current-risk",
     "customer": "Cliente",
@@ -371,7 +371,7 @@
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
     "dashboard": "Painel de controle",
-    "dashboard-backup": "Copia de seguridad",
+    "dashboard-backup": "Cópia de segurança",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
     "dashboard-for": "Dashboard da %company%",
     "data-source": "Origin data",
@@ -388,7 +388,7 @@
     "dateentry-wildcard-info": "dateentry-wildcard-info",
     "day": "day",
     "days": "dias",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Nº dias de retenção de logs",
     "days-until-expiration": "Dias até o vencimento",
     "db-host": "Servidor de banco de dados",
     "db-name": "Nome do banco de dados",
@@ -493,9 +493,9 @@
     "drag": "Arrastrar",
     "dto": "Disco.",
     "dto-2": "Dto. 2",
-    "duplicate-record": "duplicate-record",
+    "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referência '%reference%' duplicada",
-    "duplicated-request": "duplicated-request",
+    "duplicated-request": "Pedido duplicado",
     "duration": "Duração",
     "edit": "Editar",
     "editable": "Editable",
@@ -516,7 +516,7 @@
     "emails": "Emails",
     "emails-sent": "Emails enviados",
     "employee": "Employee",
-    "employees": "employees",
+    "employees": "Empregados",
     "empty": "Vazio",
     "empty-contact-data": "O contacto deve ter nome ou email ou endereço",
     "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
@@ -539,7 +539,7 @@
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar linhas",
-    "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
+    "error-no-name-in-settings": "Erro na vista %viewName%. Falta informar a coluna 'name' no xml",
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
     "error-reading-file": "Erro ao ler o arquivo '0'",
@@ -580,11 +580,11 @@
     "exempt": "Isentar",
     "exercise": "Exercício",
     "exercise-date-out-range": "Date not in exercise range.",
-    "exercise-date-range-exists": "exercise-date-range-exists",
+    "exercise-date-range-exists": "Já existe um exercício nesse intervalo de datas (%start% - %end%)",
     "exercise-not-found": "Exercício não encontrado.",
     "exercise-without-accounting-plan": "O",
     "exercises": "Exercícios",
-    "exit": "exit",
+    "exit": "Sair",
     "expedient": "Expediente",
     "expense-subaccount": "expense-subaccount",
     "expenses": "Despesas",
@@ -593,7 +593,7 @@
     "expired": "expired",
     "expired-receipt": "R",
     "export": "exportar",
-    "export-bill": "export-bill",
+    "export-bill": "Fatura de exportação",
     "extra-file": "Extra file",
     "failed": "Falhado",
     "families": "Famílias",
@@ -625,7 +625,7 @@
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
     "finished-cron": "Terminou a execução do cron do FacturaScripts, tempo decorrido: %timeNeeded%",
-    "first-quarter": "Primer trimestre",
+    "first-quarter": "1º trimestre",
     "first-steps": "f",
     "first-trimester": "Primeiro trimestre",
     "fiscal-data": "Dados fiscais",
@@ -664,7 +664,7 @@
     "general-concepts": "Conceitos Gerais",
     "general-data": "Dados gerais",
     "generate": "Gerar",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Gerar lançamentos",
     "generate-accounting-entry": "generate-accounting-entry",
     "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "generate-invoice",
@@ -724,7 +724,7 @@
     "help": "Socorro",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
-    "hide": "hide",
+    "hide": "Ocultar",
     "high": "Alto",
     "high-purchase-price": "Preço de compra mais alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
@@ -771,7 +771,7 @@
     "integrity-check-help": "This is a check of system integrity, described as",
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Intra-comunitária",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
@@ -853,7 +853,7 @@
     "last-bimester": "last-bimester",
     "last-block": "Último bloco",
     "last-ip": "Último IP",
-    "last-month": "last-month",
+    "last-month": "O mês passado",
     "last-price-estimation": "Último preço de orçamento",
     "last-price-sale": "Último precio de venta",
     "last-purchase-price": "último-preço-de-compra",
@@ -901,7 +901,7 @@
     "login-text": "Entrar",
     "login-to-continue": "Faça login para continuar",
     "login-to-continue-p": "Necessita identificar-se para continuar com esta ação. Clique em iniciar sessão ou crie uma conta.",
-    "login-user-not-found": "Usuário não encontrado",
+    "login-user-not-found": "Usuário não encontrado: %nick%",
     "logo": "logo",
     "logout": "Sair",
     "logout-ok": "Sair com sucesso.",
@@ -933,7 +933,7 @@
     "marked-as-homepage": "M",
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "Risco máximo",
-    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-with-cifnif": "Máximo valor com CIF\/NIF",
     "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
     "maximum-stock": "Estoque máximo",
     "may": "Mayo",
@@ -1027,7 +1027,7 @@
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Non editable document",
     "none": "Nenhum",
-    "normal": "normal",
+    "normal": "Normal",
     "not-allowed-delete": "Não tem permiso para eliminar",
     "not-allowed-modify": "n",
     "not-enough-stock": "not-enough-stock",
@@ -1071,9 +1071,9 @@
     "operation": "Operación",
     "operator": "Operador",
     "option": "Opção",
-    "optional": "optional",
+    "optional": "Opcional",
     "options": "Opções",
-    "options-button-header": "Maquetación y permisos",
+    "options-button-header": "Maquetação e permissões",
     "order": "Ordem",
     "order-email-subject": "O seu pedido %code%",
     "order-email-text": "Olá, vai anexo a sua Nota de Encomenda\/Pedido %code%",
@@ -1101,7 +1101,7 @@
     "parent-account": "Conta Pai",
     "parent-family-cant-be-child": "A família mãe não pode ser a mesma que a criança.",
     "parent-group": "Grupo Pai",
-    "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
+    "parent-group-cant-be-the-same-group": "O grupo pai não pode ser o mesmo grupo",
     "parent-group-loop": "Grupo pai %parentGroup% causando relação circular",
     "partnumber": "Número da peça",
     "passenger": "Passageiro",
@@ -1119,7 +1119,7 @@
     "payment-methods": "Métodos de Pagamento",
     "payments": "Pagamentos",
     "pct": "% pct",
-    "pct-irpf": "% IRPF",
+    "pct-irpf": "% IRS",
     "pct-surcharge": "% Acréscimo",
     "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
@@ -1169,7 +1169,7 @@
     "port": "Porta",
     "position": "Posição",
     "positive-balance": "Saldo positivo",
-    "post-office-box": "Correio postal",
+    "post-office-box": "Apartado",
     "postgresql": "PostgreSQL",
     "precio": "Prive",
     "predefined-concepts": "Predefined Concepts",
@@ -1237,7 +1237,7 @@
     "read-more": "Leer más",
     "readonly": "readonly",
     "rebuild": "rebuild",
-    "rebuild-completed": "rebuild-completed",
+    "rebuild-completed": "Reconstrução concluída",
     "rebuild-stock": "reconstruir-estoque",
     "receipt": "receipt",
     "receipt-expense-account": "Gastos no recibo %document%",
@@ -1246,7 +1246,7 @@
     "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "Registro não encontrado",
     "record-save-error": "Ocorreu um erro ao salvar os dados",
-    "record-updated-correctly": "Registro atualizado corretamente!",
+    "record-updated-correctly": "Registro atualizado corretamente.",
     "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
@@ -1292,11 +1292,11 @@
     "reply": "Resposta",
     "report": "Relatório",
     "report-grouping-account": "Agrupar por contas",
-    "report-non-grouping-account": "Non group by account",
+    "report-non-grouping-account": "Não agrupar por contas",
     "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
     "request-sent": "request-sent",
-    "required": "required",
+    "required": "Obrigatório",
     "requires-core": "Requer FacturaScripts %version%",
     "reserved": "Reservado",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
@@ -1348,7 +1348,7 @@
     "send-location": "Enviar ubicación",
     "send-mail": "Enviar email",
     "send-mail-error": "send-mail-error",
-    "send-mail-ok": "send-mail-ok",
+    "send-mail-ok": "Email enviado corretamente",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Enviou um áudio",
     "sent-a-document": "Envió un documento",
@@ -1405,7 +1405,7 @@
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
     "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sorted-desc": "Ordenado de forma descendente",
     "source": "Fonte",
     "source-code": "Source code",
     "special-account": "Conta especial",
@@ -1505,7 +1505,7 @@
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
     "telemetry-data-to-send": "dados de telemetria para enviar",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Prefixo telefónico",
     "template": "Modelo",
     "template-error": "Erro de modelo",
     "template-not-found": "Modelo não encontrado",
@@ -1584,7 +1584,7 @@
     "unpaid": "unpaid",
     "until-accounting-entry": "until-accounting-entry",
     "until-date": "Até",
-    "until-subaccount": "until-subaccount",
+    "until-subaccount": "Até subconta",
     "update": "update",
     "update-stock": "Atualizar stock",
     "update-supplier-prices": "update-supplier-prices",
@@ -1664,7 +1664,7 @@
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
     "x-operation": "Operação sobre X",
-    "y-column": "y-column",
+    "y-column": "Coluna Y",
     "year": "Ano",
     "year-wildcard-info": "Ano atual (da data de hoje)",
     "yearly": "Anualmente",
