--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -726,7 +726,7 @@
     "help-server-accepts-filesize": "Este servidor permet fitxers d'una mida màxima de %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Preu més alt",
     "hint-create-accounting-entry": "Crear l'assentament contable per a regularisar els imposts del periodo",
     "hint-vat-register": "Vore\/Modificar el registre d'impost",
     "history": "Historial",
@@ -826,7 +826,7 @@
     "lang-code": "Còdic de l'idioma",
     "language": "Idioma",
     "languages-ca_ES": "Català",
-    "languages-cs_CZ": "Checo",
+    "languages-cs_CZ": "Txec",
     "languages-de_DE": "Alemà",
     "languages-en_EN": "English",
     "languages-es_AR": "Español (Argentina)",
@@ -894,7 +894,7 @@
     "locked": "Bloquejat",
     "log": "Registre",
     "login": "Iniciar sessió",
-    "login-cookie-fail": "La cookie de sessió no és vàlida",
+    "login-cookie-fail": "La cookie de sessió no és vàlida: probablement heu iniciat sessió des d'un altre dispositiu o navegador.",
     "login-image": "Imagen de login",
     "login-ok": "Has iniciat sessió correctament (cookie) com a usuari: '%nick%'",
     "login-password-fail": "L'usuari o la contrasenya no són correctes",
@@ -982,7 +982,7 @@
     "month-name": "Nom del més",
     "month-wildcard-info": "Més actual (de la data actual)",
     "monthly": "Mensualment",
-    "monthly-payment": "Pago mensual",
+    "monthly-payment": "Pagament mensual",
     "months": "Mesos",
     "more": "Més",
     "more-fields": "Més camps",
@@ -1016,7 +1016,7 @@
     "no-data": "No hi han senyes",
     "no-data-received-form": "Cap dada rebuda pel formulari",
     "no-extra-lines": "No afegir línies extra",
-    "no-gaps-found": "Ningún hueco encontrado",
+    "no-gaps-found": "Cap buit trobat",
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha cap cantitat pendent",
     "no-print-permission": "No té permís per imprimir o exportar",
@@ -1165,7 +1165,7 @@
     "plugins": "Complements",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "Punts",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Punts d'interès",
     "port": "Port",
     "position": "Càrrec",
     "positive-balance": "positive-balance",
@@ -1253,7 +1253,7 @@
     "rectified-invoices": "Factures rectificatives",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Sèrie rectificativa",
-    "redirect": "Redirección",
+    "redirect": "Redirecció",
     "reference": "Referència",
     "reference+description": "Referència + Descripció",
     "refresh": "Recarregar",
@@ -1330,7 +1330,7 @@
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-product": "Search product",
     "second-hand": "Segona mà",
-    "second-quarter": "2º trimestre",
+    "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
     "select": "select",
     "select-all": "Seleccionar tot",
@@ -1375,7 +1375,7 @@
     "setup-options": "Opcions de configuració",
     "shipping": "Enviament",
     "shipping-address": "Direcció d'enviament",
-    "shop": "Tienda",
+    "shop": "Botiga",
     "shops": "Tiendas",
     "short": "Curt",
     "short-name": "Nom curt",
@@ -1416,7 +1416,7 @@
     "standard": "Estàndard",
     "start": "Inicio",
     "start-date": "Data d'inici",
-    "start-hour": "Hora de inicio",
+    "start-hour": "Hora d'inici",
     "start-time": "Hora d'inici",
     "starting-cron": "Escomençant l'eixecució del cron de FacturaScripts...",
     "state": "Estat",
@@ -1478,7 +1478,7 @@
     "supplier-products": "Productes del proveïdor",
     "supplier-reference": "Referència del proveïdor",
     "suppliers": "Proveïdors",
-    "support": "Soporte",
+    "support": "Suport",
     "supported-tax-re-subaccount": "Subcompte recàrrec suportat",
     "supported-tax-subaccount": "Subconte del IVA soportat",
     "surcharge": "Recàrrec",
@@ -1592,7 +1592,7 @@
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualitzador",
     "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available-p": "Hi ha actualitzacions disponibles de FacturaScripts. Si us plau, feu clic a l'actualitzador i descarregueu la nova versió. Les actualitzacions corregeixen errors i afegeixen noves funcions.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Pujar arxiu",
     "uploaded-at": "Pujat el",
@@ -1660,7 +1660,7 @@
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
     "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
-    "works": "Trabajos",
+    "works": "Treballs",
     "write-a-message-here": "Escriu un missatge ací",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
