--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1263,7 +1263,7 @@
     "refunds": "Remboursements",
     "register": "S'enregistrer",
     "register-install-ad": "Enregistrez l'installation de FacturaScripts",
-    "register-install-ad-p": "Si vous enregistrez l'installation de FacturaScripts, vous obtiendrez 1 mois de parrainage PRO, ce qui vous permettra de télécharger l'un de nos plugins exclusifs. De plus, cela nous aide à obtenir des statistiques sur les versions du core et de PHP.",
+    "register-install-ad-p": "Si vous enregistrez l'installation de FacturaScripts, vous obtiendrez 1 mois de parrainage PRO, ce qui vous permet de télécharger l'un de nos plugins exclusifs. De plus, cela nous aide à obtenir des statistiques sur les versions du noyau et de PHP.",
     "register-installation": "Enregistrer cette installation",
     "register-installation-p": "Enregistrez votre installation pour pouvoir mettre à jour les modules externes payants ou privés.",
     "register-symbol": "#",
@@ -1527,7 +1527,7 @@
     "thousands-separator": "Séparateur de milliers",
     "thursday": "Jeudi",
     "ticket": "Ticket",
-    "tickets": "Tickets",
+    "tickets": "Billets",
     "time": "Heure",
     "timezone": "Sélectionner le fuseau horaire",
     "title": "Titre",
